--- a/sass/style.css
+++ b/sass/style.css
@@ -11,7 +11,6 @@ h2 {
   text-align: center;
   color: blue;
 }
-
 .blog-post p {
   font-size: 20px;
 }
@@ -104,5 +103,4 @@ h3 {
 
 .info-important {
   background-color: magenta;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
