--- a/five-projects-certificate/my-app/src/markdown-previewer/styles/style.css
+++ b/five-projects-certificate/my-app/src/markdown-previewer/styles/style.css
@@ -1,11 +1,41 @@
+@charset "UTF-8";
 #main {
   margin: 0 auto;
 }
 
-#preview blockquote {
-  border-left: 3px solid;
+#preview blockquote::before {
+  font-family: Arial;
+  content: "“";
+  color: rgba(0, 80, 115, 0.5);
+  font-size: 4em;
+  position: relative;
+  right: 5px;
+  top: 30px;
+  line-height: 0px;
+  padding-right: 10px;
   padding-left: 5px;
-  margin-left: 25px;
+}
+
+#preview blockquote {
+  border-left: 3px solid rgb(0, 80, 115);
+  margin-left: 10px;
+  margin-top: 10px;
+  font-style: italic;
+  color: #333;
+  display: inline-flex;
+  flex-direction: column;
+  background-color: rgba(0, 80, 115, 0.15);
+}
+
+#preview blockquote > * {
+  margin: 0;
+  padding: 0 10px 0 45px;
+}
+
+#preview pre {
+  max-height: 33vh;
+  max-width: 80vw;
+  overflow: auto;
 }
 
 #editor {
