--- a/five-projects-certificate/my-app/src/markdown-previewer/styles/style.scss
+++ b/five-projects-certificate/my-app/src/markdown-previewer/styles/style.scss
@@ -1,11 +1,43 @@
+$m: rgb(0, 80, 115);
+$m15: rgba($m, 0.15);
+$m50: rgba($m, 0.5);
+
 #main {
   margin: 0 auto;
 }
 
-#preview blockquote {
-  border-left: 3px solid;
+#preview blockquote::before {
+  font-family: Arial;
+  content: "\201C";
+  color: $m50;
+  font-size: 4em;
+  position: relative;
+  right: 5px;
+  top: 30px;
+  line-height: 0px;
+  padding-right: 10px;
   padding-left: 5px;
-  margin-left: 25px;
+}
+#preview blockquote {
+  border-left: 3px solid $m;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-style: italic;
+  color: #333;
+  display: inline-flex;
+  flex-direction: column;
+
+  background-color: $m15;
+}
+#preview blockquote > * {
+  margin: 0;
+  padding: 0 10px 0 45px;
+}
+
+#preview pre {
+  max-height: 33vh;
+  max-width: 80vw;
+  overflow: auto;
 }
 
 #editor {
