--- a/five-projects-certificate/my-app/src/pomodoro-timer/styles/style.css
+++ b/five-projects-certificate/my-app/src/pomodoro-timer/styles/style.css
@@ -1,1 +1,6 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+#break-time,
+#session-time,
+#time-left {
+  font-family: "Martian Mono", monospace;
+}/*# sourceMappingURL=style.css.map */
